# calendar-tui

./: Cargo.toml
src/: app.rs  event.rs  main.rs  theme.rs  tui.rs
src/calendar/: calendar.rs  event.rs  mod.rs  reminder.rs  store.rs
src/components/: day_view.rs  event_form.rs  mod.rs  month_view.rs  reminder_list.rs  status_bar.rs  week_view.rs
