[package]
name = "calendar-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
chrono = "0.4"
color-eyre = "0.6"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-event-kit = "0.3"
block2 = "0.6"
